EDM-1274: ListEvents API and CLI
